# memor-ia

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Layout.tsx  ui.tsx
dashboard/src/hooks/: useAsync.ts
dashboard/src/lib/: api.ts
dashboard/src/pages/: AuditLogPage.tsx  KnowledgeGraphPage.tsx  MemoryExplorerPage.tsx  OverviewPage.tsx  SettingsPage.tsx
dashboard/src/types/: api.ts
docs/: API_REFERENCE.md  ARCHITECTURE.md  BUSINESS.md  CONFIGURATION.md  DASHBOARD.md  DATA_GUIDE.md  E2E_COMPREHENSIVE_REPORT.md  E2E_TEST_REPORT.md  E2E_USER_REPORT.md  INDUSTRIALIZATION.md  MCP_SERVER.md  ROADMAP.md
examples/: 01_basic_memory.py  02_knowledge_graph.py  03_semantic_search.py  04_proactive_agent.py  05_full_pipeline.py
src/memoria/: __init__.py
src/memoria/acl/: __init__.py  enforcement.py  grants.py  policies.py  roles.py
src/memoria/adversarial/: __init__.py  detector.py  hallucination.py  tamper.py  types.py  verifier.py
src/memoria/biz_intel/: __init__.py  lifecycle.py  segmentation.py  signals.py  types.py  value.py
src/memoria/bridge/: __init__.py  events.py  protocol.py
src/memoria/cache/: __init__.py  backend.py  factory.py  memory.py  redis.py
src/memoria/cognitive/: __init__.py  (+5 more)
tests/: conftest.py  test_acl.py  test_adversarial.py  test_biz_intel.py  test_bridge.py  test_cache.py  test_cognitive.py  test_comms.py  test_consolidation.py  test_context.py  test_contextual.py  test_core.py  test_coverage_gaps.py  test_dashboard.py  test_dedup.py  test_dream_engine.py  test_e2e_backends.py  test_e2e_comprehensive.py  test_e2e_conversation.py  test_e2e_mcp_client.py  test_emotional.py  test_episodic.py  test_extraction.py  test_federation.py  test_fusion.py  test_fuzz_core.py  test_fuzz_intel.py  test_fuzz_v6.py  test_fuzz_v7.py  test_gdpr.py  test_graph.py  test_habits.py  test_identity.py  test_importance.py  test_integration.py  test_integration_memoria.py  test_integration_v2.py  test_intelligence.py  test_mcp.py  test_mcp_server.py  (+22 more)
(+207 files in other folders)
